--- a/Pipfile
+++ b/Pipfile
@@ -11,4 +11,6 @@ django = ">=3.1.0"
 wagtail = ">=2.10.0"
 graphene-django = ">=2.0"
 uWSGI = ">=2.0.18"
+django-cors-headers = "*"
+
 [dev-packages]
